--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,3 +1,15 @@
+body {
+    background-color: bisque;
+}
+
+#heading {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 4em;
+    color: blue;
+}
+
 #content {
   margin-left: auto;
   margin-right: auto;
